--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
 <body>
 <!-- AWAL  -->
 
-<!-- Isi Pekerjaanmu Di Sini -->
 
+<!-- Isi Pekerjaanmu Di Sini -->
+<div class="container">
+  <div class="row row-cols-2 pt-2">
+    <div class="col"nama><span class="d-block p-2 bg-primary text-white text-center">Nafisah</span> <span class="d-block p-2 bg-success text-white">Alamat</span></div>
+    <div class="col exp">EXPERIENCE</div>
+    <div class="col kel"></div>KELEBIHAN<span class="d-inline p-2 bg-primary text-white ml-3 d-md-none d-lg-block">multitasking</span></div>
+  </div>
+</div>
 <!-- AKHIR  -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
