--- a/index.html
+++ b/index.html
@@ -18,13 +18,44 @@
 
 
 <!-- Isi Pekerjaanmu Di Sini -->
+<div class="text-center">
+  <h1 class="text-primary">Berikut adalah CV saya</h1>
+</div>
+
 <div class="container">
   <div class="row row-cols-2 pt-2">
-    <div class="col"nama><span class="d-block p-2 bg-primary text-white text-center">Nafisah</span> <span class="d-block p-2 bg-success text-white">Alamat</span></div>
-    <div class="col exp">EXPERIENCE</div>
-    <div class="col kel"></div>KELEBIHAN<span class="d-inline p-2 bg-primary text-white ml-3 d-md-none d-lg-block">multitasking</span></div>
+    <div class="col"nama><span class="d-block p-2 bg-primary text-white text-center">Nafisah Aliyah</span>
+       <span class="d-block p-2 bg-success text-white text-center">Jl. Arief rahman hakim</span></div>
+    <div class="col exp font-weight-bold">EXPERIENCE <ul class="font-italic">
+      <li>HMSI</li>
+      <li>Pra - TD</li>
+      <li>TD</li>
+      <li>TM</li>
+    </ul></div>
+    <div class="col font-weight-bold"></div>KELEBIHAN<span class="d-inline p-2 bg-primary text-white ml-3 d-md-none d-lg-block"><ul class="list-unstyled">
+  <li class="bg-dark ml-3">Berikut adalah kelebihan saya</li>
+    <ul class="font-italic">
+      <li>Berenang gaya katak</li>
+      <li>Belanja</li>
+      <li>Main game</li>
+      <li>Tidur</li>
+    </ul>
+</ul></span></div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <blockquote class="blockquote text-center">
+  <p class="mb-0">Dunia memang tidak adil, jadi biasakan dirimu.</p>
+  <footer class="blockquote-footer">Spongebob Squarepants, <cite title="Source Title">Patrick Star</cite></footer>
+</blockquote>
+    </div>
+    <div class="col pt-5">
+      <p>"Saya adalah seorang pekerja keras, maka dari itu"</p>
+    </div>
+  </div>
+
 <!-- AKHIR  -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
