--- a/index.html
+++ b/index.html
@@ -25,14 +25,30 @@
 <div class="container">
   <div class="row row-cols-2 pt-2">
     <div class="col"nama><span class="d-block p-2 bg-primary text-white text-center">Nafisah Aliyah</span>
-       <span class="d-block p-2 bg-success text-white text-center">Jl. Arief rahman hakim</span></div>
+       <span class="d-block p-2 bg-success text-white text-center">Jl. Arief rahman hakim</span>
+       <span class="d-block p-2 bg-primary text-white text-center">082745437</span>
+     </div>
     <div class="col exp font-weight-bold">EXPERIENCE <ul class="font-italic">
       <li>HMSI</li>
       <li>Pra - TD</li>
       <li>TD</li>
       <li>TM</li>
     </ul></div>
-    <div class="col font-weight-bold"></div>KELEBIHAN<span class="d-inline p-2 bg-primary text-white ml-3 d-md-none d-lg-block"><ul class="list-unstyled">
+    <div class="col font-weight-bold bg-gradient-warning d-sm-none d-md-block">KELEBIHAN :
+      <div class="badge badge-primary text-wrap" style="width: 6rem;">
+  Rajin
+</div>
+      <div class="badge badge-primary text-wrap" style="width: 6rem;">
+        Suka Menabung
+</div>
+      <div class="badge badge-primary text-wrap" style="width: 6rem;">
+        Suka Belanja
+</div>
+<div class="badge badge-primary text-wrap" style="width: 6rem;">
+  Mengerjakan PR
+</div>
+    </div><span class="d-inline p-2 bg-primary text-white ml-3 d-md-none d-lg-block">
+      <ul class="list-unstyled">
   <li class="bg-dark ml-3">Berikut adalah kelebihan saya</li>
     <ul class="font-italic">
       <li>Berenang gaya katak</li>
@@ -47,12 +63,13 @@
   <div class="row">
     <div class="col">
       <blockquote class="blockquote text-center">
-  <p class="mb-0">Dunia memang tidak adil, jadi biasakan dirimu.</p>
-  <footer class="blockquote-footer">Spongebob Squarepants, <cite title="Source Title">Patrick Star</cite></footer>
+  <p class="mb-0 bg-warning">Dunia memang tidak adil, jadi biasakan dirimu.</p>
+  <footer class="blockquote-footer bg-warning">Spongebob Squarepants, <cite title="Source Title">Patrick Star</cite></footer>
 </blockquote>
     </div>
-    <div class="col pt-5">
-      <p>"Saya adalah seorang pekerja keras, maka dari itu"</p>
+    <div class="col pt-3 bg-warning d-md-none d-lg-block">
+      <p class=" mb-0 bg-info ">"Saya adalah seorang pekerja keras, maka dari itu saya yg terbaik "</p>
+      <footer class="blockquote-footer bg-info">DPP C, <cite title="Source Title">Rivza Adrian</cite></footer>
     </div>
   </div>
 
