--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Isi Pekerjaanmu Di Sini -->
 <div class="text-center">
-  <h1 class="text-primary">Berikut adalah CV saya</h1>
+  <h1 class="text-primary display-1">Berikut adalah CV saya</h1>
 </div>
 
 <div class="container">
@@ -71,6 +71,25 @@
       <p class=" mb-0 bg-info ">"Saya adalah seorang pekerja keras, maka dari itu saya yg terbaik "</p>
       <footer class="blockquote-footer bg-info">DPP C, <cite title="Source Title">Rivza Adrian</cite></footer>
     </div>
+  </div>
+  <div class="container pt-5">
+  <div class="row">
+    <div class="col-sm-8 bg-primary">
+      <div class="">
+        <h3>Matakuliah yg sudah diambil</h3>
+        <ol class="font-italic">
+          <li>DMJK</li>
+          <li>DPP</li>
+          <li>Alprog</li>
+          <li>KSI</li>
+        </ol>
+      </div>
+    </div>
+    <div class="col-sm-4 bg-warning pt-3"><div>
+      <h3 id="hobby">Hobby gue</h3>
+      <p><del>Gossip.</del></p>
+    </div>
+  </div>
   </div>
 
 <!-- AKHIR  -->
